@@ -1,25 +1,54 @@
 package pages;
 
+import org.openqa.selenium.By;
 import org.openqa.selenium.WebDriver;
 import org.openqa.selenium.WebElement;
-import org.openqa.selenium.support.FindBy;
 import java.util.List;
 
 public class HomePage extends BasePage {
-    @FindBy(css = "div.product-box a.product-title")
-    private List<WebElement> productLinks;
+    // Locators with meaningful names using xpath
+    private final By searchBox = By.xpath("//input[@id='js-global-seach']");
+    private final By searchButton = By.xpath("//span[contains(text(),'Tìm kiếm')]");
+    private final By productTitleLinks = By.xpath("//div[@id='js-product-list']//a[@class='product-name line-clamp-2']");
+    private final By loadingSpinner = By.xpath("//div[contains(@class, 'loading-spinner')]");
 
     public HomePage(WebDriver driver) {
         super(driver);
     }
 
-    public void clickFirstProduct() {
+    public void searchProduct(String productName) {
+        // Wait for search box to be visible and interactive
         waitForPageLoad();
-        if (!productLinks.isEmpty()) {
-            productLinks.get(0).click();
+        waitForElementToBeVisible(searchBox);
+        WebElement searchInput = driver.findElement(searchBox);
+        searchInput.clear();
+        searchInput.sendKeys(productName);
+
+        // Click search button if it exists
+        List<WebElement> searchButtons = driver.findElements(searchButton);
+        if (!searchButtons.isEmpty()) {
+            searchButtons.getFirst().click();
+        }
+
+        // Wait for loading to complete
+        waitForElementToDisappear(loadingSpinner);
+        System.out.println("✅ Successfully searched for product: " + productName);
+    }
+
+    public void clickProduct() {
+        // Wait for products to be visible after search
+        waitForElementToBeVisible(productTitleLinks);
+        List<WebElement> availableProducts = driver.findElements(productTitleLinks);
+
+        if (!availableProducts.isEmpty()) {
+            WebElement firstProduct = availableProducts.getFirst();
+            waitForElementToBeClickable(firstProduct);
+            firstProduct.click();
+            System.out.println("✅ Successfully clicked product");
         } else {
-            throw new RuntimeException("No products found on homepage");
+            System.out.println("❌ No products found on the page");
+            System.out.println("Current URL: " + driver.getCurrentUrl());
+            throw new RuntimeException("No products found on homepage - Please check if products are loaded correctly");
         }
     }
 }
-
